[gd_scene load_steps=6 format=2]

[ext_resource path="res://Pause_menu_script.gd" type="Script" id=1]
[ext_resource path="res://pause_menu.gd" type="Script" id=2]
[ext_resource path="res://src/Level.tscn" type="PackedScene" id=3]
[ext_resource path="res://Option_menu.tscn" type="PackedScene" id=4]

[sub_resource type="Theme" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )
MainGameScene = ExtResource( 3 )
OptionGameScene = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Resume_buton" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = -91.0
margin_right = 103.5
margin_bottom = -31.0
theme = SubResource( 1 )
text = "Resume"
__meta__ = {
"_editor_description_": ""
}

[node name="Option_button" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = -15.0
margin_right = 103.5
margin_bottom = 45.0
text = "Option"
__meta__ = {
"_editor_description_": ""
}

[node name="Menu_buton" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = 63.0
margin_right = 103.5
margin_bottom = 123.0
text = "Main menu"
__meta__ = {
"_editor_description_": ""
}

[node name="Quit_buton" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = 144.0
margin_right = 103.5
margin_bottom = 204.0
text = "Quit"
__meta__ = {
"_editor_description_": ""
}

[node name="TextEdit" type="TextEdit" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -229.0
margin_top = 94.0
margin_right = 183.0
margin_bottom = 161.0
text = "Pause menu"

[connection signal="button_up" from="Control/Resume_buton" to="." method="_on_Resume_buton_button_up"]
[connection signal="pressed" from="Control/Option_button" to="." method="_on_Option_button_pressed"]
[connection signal="button_up" from="Control/Menu_buton" to="." method="_on_Menu_buton_button_up"]
[connection signal="button_up" from="Control/Quit_buton" to="." method="_on_Quit_buton_button_up"]
